Fix logo size: Remove height 100% and set logo to exactly 120x120px - Allow logo to overflow header boundaries - Update header overflow to visible

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -44,9 +44,9 @@
 }
 
 .logoImage {
-  height: 100%;
-  width: auto;
-  max-width: 200px;
+  height: 120px;
+  width: 120px;
+  
   object-fit: contain;
   display: block;
 }
